# yt2podcast

./: pyproject.toml
src/yt2mob/: .gitignore  Makefile  main.py  models.py  s3.py  s3.yml.template  yt.py
